TAG: webshare-tr9329-BP
DATE: 10/28/2008
STAFF: marka
RELEASE: branch point
CHANGES:
1) branch point for searchtool release

TAG: webshare-4-1-2-4
DATE: 09/18/2008
STAFF: jsb
CHANGES:
1) added PHENO_CACHE_TIMEOUT to global config files

TAG: webshare-4-1-2-3
DATE: 09/10/2008
STAFF: jsb
CHANGES:
1) fixes after phenoview alpha 1 build

TAG: webshare-4-1-2-2
DATE: 09/03/2008
STAFF: jsb
CHANGES:
1) minor documentation additions for mgi.js

TAG: webshare-4-1-2-1
DATE: 08/19/2008
STAFF: jsb
CHANGES:
1) fixes for items in QC after dev build

TAG: webshare-4-1-2-0
DATE: 08/06/2008
STAFF: jsb
CHANGES:
1) merge tr8079 to trunk

TAG: webshare-4-1-1-1
DATE: 7/14/2008
STAFF: marka
CHANGES:
1) merge tr9088 to trunk

TAG: webshare-4-1-0-1
DATE: 6/03/2008
STAFF: marka
CHANGES:
1) merge tr8528 to trunk

TAG: webshare-tr8528-1
DATE: 5/28/2008
STAFF: marka
RELEASE: dev build
CHANGES:
1) dev build tag

TAG: webshare-tr8079-BP
DATE: 5/20/2008
STAFF: jsb
RELEASE: branch point
CHANGES:
1) branch point for phenoview release

TAG: webshare-4-0-0-18
DATE: 2/25/08
STAFF: mhall
RELEASE: Minor changes as a result of 4.0 release.

TAG: webshare-4-0-0-17
DATE: 2/12/08
STAFF: pf
RELEASE: Release of MGI 4.0

TAG: webshare-4-0-0-x (1 -> 16)
DATE: 2/7/08 (last)
STAFF: pf
RELEASE: MGI 4.0 alpha/beta tags

TAG: webshare-tr8087-x (BP, 1->15)
DATE: 12/20/07 (last)
STAFF: pf
RELEASE: 4.0 Branch point and branch tags

TAG: webshare-3-5-0-2
DATE: 06/02/2006
STAFF: jsb
RELEASE: beta
CHANGES:
1) fixed config files to now be checked in as *.defaults

TAG: webshare-3-5-0-1
DATE: 05/24/2006
STAFF: jsb
RELEASE: alpha
CHANGES:
1) added new style to images/mgi.css

TAG: webshare-3-5-0-0
DATE: 05/15/2006
STAFF: jsb
RELEASE: alpha
CHANGES:
1) merged tr7062 branch to trunk (MGI 3.5 release)

TAG: webshare-tr7062-BP
TAG: webshare-tr7062-1
DATE: 05/04/2006
STAFF: jsb
RELEASE: alpha
CHANGES:
1) changes to mgi.css for MGI 3.5 release

TAG: webshare-tr7062-BP
DATE: 02/28/2006
STAFF: jsb
RELEASE: branch point
CHANGES: