@@ -62,6 +62,9 @@ JAVAWI_CACHE_ENABLED    0
 # performance)
 PHENO_CACHE_TIMEOUT   0
 
+# indicates if the awstats browser stat collection javascript is enabled
+STAT_COLLECT_ENABLED    0
+
 ###--
 ###-- MGI BASE URLs -be aware some server aliases will include the '/www/'
 ###--
@@ -69,6 +72,8 @@ PHENO_CACHE_TIMEOUT   0
 JAVAWI_URL              http://${JAVA_HOST}/javawi2/servlet/
 
 WI_URL                  http://${PY_HOST}/wi/
+
+QUICKSEARCH_URL         http://prodwww.informatics.jax.org/searchtool/
 
 MGIHOME_URL             http://${PY_HOST}/mgihome/
 
