@@ -63,6 +63,9 @@ JAVAWI_CACHE_ENABLED    1
 # performance)
 PHENO_CACHE_TIMEOUT   30
 
+# indicates if the awstats browser stat collection javascript is enabled
+STAT_COLLECT_ENABLED    0
+
 ###--
 ###-- MGI BASE URLs -be aware some server aliases will include the '/www/'
 ###--
@@ -70,6 +73,8 @@ PHENO_CACHE_TIMEOUT   30
 JAVAWI_URL              http://${JAVA_HOST}/javawi2/servlet/
 
 WI_URL                  http://${PY_HOST}/
+
+QUICKSEARCH_URL         http://www.informatics.jax.org/searchtool/
 
 MGIHOME_URL             http://${PY_HOST}/mgihome/
 
