@@ -1,23 +1,20 @@
-<form action="${JAVAWI_URL}WIFetch" method="get">
+<form action="${QUICKSEARCH_URL}Search.do" method="get">
 <table>
 <tr>
 
  <td>
-    <a onClick='return false;' href="${USERDOCS_URL}searchtool_help.shtml"
-    onMouseOver="return overlib('You may search for genes and markers by name or symbol, or any form of accession ID.<BR/><BR/>Use * for wildcard. Use quotation marks around phrases. Use angle brackets around superscript.<BR/>Examples:<BR/>&nbsp;&nbsp;&nbsp;&nbsp;Pax*&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&quot;paired box&quot;<BR/> &nbsp;&nbsp;&nbsp;&nbsp;OST128284 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MGI:97485<BR/> &nbsp;&nbsp;&nbsp;&nbsp;Pax6&lt;10Neu&gt; for Pax6<sup>10Neu</sup><BR/><BR/>Advanced searches are listed under the Search menu.<BR/><center><a href=\'${USERDOCS_URL}searchtool_help.shtml\'>More searching help.</a></center><BR/>', STICKY, CAPTION, 'Search Tips', CENTER, BELOW, WIDTH, 265, DELAY, 600);" onMouseOut="nd();">
+    <a onClick="return false;" href="${USERDOCS_URL}searchtool_help.shtml" onMouseOver="return overlib('You can:<ul class=\'searchToolHelp\'><li>Search for genome features by name, symbol, synonym, ortholog, allele, or accession ID:</li> <ul><li>p53 protein cell cycle DNA damage</li><li>Notch1</li><li>NM_053172</li><li>AT3</li></ul><li>Search for genome features and vocabulary terms by keywords or accession ID. Use several keywords to find the most relevant results:</li><ul><li>GO:0004713</li><li>resistance to fatty liver development</li><li>vitamin D receptor</li><li>lymphocyte function antigen immunodeficiency</li> </ul><li>Use asterisks (*) for wildcards at the end of partial words or genomic symbols:</li><ul><li>Pax*</li><li>embr* development</li><li>hippocamp* pyramid* cell layer</li></ul><li>Use quotation marks (&quot;&nbsp;&quot;) to indicate phrases:</li> <ul><li>&quot;hair follicle&quot; development</li><li>&quot;amyotrophic lateral sclerosis&quot;</li></ul><li>Use angle brackets to indicate superscript:</li><ul><li>Pax6&lt;10Neu&gt; for Pax6<sup>10Neu</sup></li></ul><li>Mix IDs, symbols, and keywords in a list:</li><ul><li>Nmt2, NM_013627, Acbd7, hair follicle development</li></ul></ul>Advanced searches are listed under the Search menu.<BR/>See <a href=\'${USERDOCS_URL}searchtool_help.shtml\'>Using the Quick Search Tool</a> for more information.', STICKY, CAPTION, 'Quick Search Tips', CENTER, BELOW, WIDTH, 450, DELAY, 600, CLOSECLICK, CLOSETEXT, 'Close X');" onMouseOut="nd();">
     <img src="${WEBSHARE_URL}images/help_small_transp.gif" border="0">
     </a>
  </td>
 
  <td>
     <input name="query" id="searchToolTextArea"
-    value=" ID or symbol or name" onFocus="if(this.defaultValue==this.value) this.value='';" size="30">
+    value=" Keywords, Symbols, or IDs" onFocus="if(this.defaultValue==this.value) this.value='';" size="30">
  </td>
 
  <td>
     <input name="submit" type="submit" class="searchToolButton" value="Quick Search" onclick="return verifySearchToolParms();">
-    <input name="page" type="hidden" value="searchTool">
-    <input name="selectedQuery" type="hidden" value="Genes and Markers">
  </td>
 
 </tr>
